# todo-clean-arc

./: .gitignore  Cargo.toml  Makefile  default.toml  docker-compose-core.yaml  docker-compose.yaml
src/: config.rs  db.rs  lib.rs  main.rs  settings.rs
src/_tests/: model_db.rs
src/api/: router.rs
src/app/: mod.rs
src/application/: mod.rs
src/application/common/: api_response.rs  date_time.rs  error.rs  mod.rs  types.rs
src/application/common/interface/: mod.rs
src/application/common/interface/authentication/: jwt_token_handler.rs
src/application/common/interface/persistance/: user_repository.rs
src/application/common/interface/persistance/db/: db.rs  mod.rs  user_repository.rs
src/config/: default.toml
src/domain/: user.rs
src/domain/entity/: error.rs  mod.rs  todo.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/authentication/: jwt_token_handler.rs
src/infrastructure/persistance/surreal/: db_connection.rs  mod.rs
src/infrastructure/persistance/surreal/repository/: todo.rs  user.rs
src/infrastructure/storage/db/: mod.rs  surreal_db.rs  todo_repository.rs  user_repository.rs
src/migrations/: 001_init_users.down.sql  001_init_users.up.sql
src/model/: db.rs  todo.rs
src/presentation/: mod.rs  router.rs  server_handler.rs
src/service/: mod.rs
src/util/config/: mod.rs
