[package]
name = "Todo"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
sqlb = "0.4.0"
sqlx = "0.7.4"
thiserror = "1.0.61"
Todo = { git = "https://github.com/bulutcan99/Todo-app.git", version = "0.1.0" }
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
config = "0.14.0"
