[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
bcrypt = "0.15.1"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
surrealdb = "1.5.3"
tokio = "1.38.0"
uuid = "1.8.0"
config = "0.14.0"
serde_derive = "1.0.203"
anyhow = "1.0.86"
