[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
surrealdb = "1.5.3"
tokio = "1.38.0"
uuid = "1.8.0"
config = "0.14.0"
serde_derive = "1.0.203"
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["cors"] }
axum = "0.7.5"
once_cell = "1.19.0"
chrono = "0.4.38"
async-trait = "0.1.80"
